2011-01-19 Pierre Wieser <pwieser@trychlos.org>

	* tools/check-po.sh: Script rewriting.

	* NEWS: Update before release.

2011-01-17 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-module.c (na_module_release_modules): Release the loaded module.

2011-01-16 Pierre Wieser <pwieser@trychlos.org>

	* run-distcheck.sh: New file.

	Add a script to check completeness of header files.

	* tools/.gitignore:
	* tools/Makefile.am:
	* tools/check-headers.sh: New files.

	* src/test/test-include.c:
	Renamed as tools/check-header.c and set it as ignored by git.

	* src/test/.gitignore:
	* src/test/Makefile.am: Updated accordingly.

	* Makefile.am:
	* configure.ac: configure in tools/.

	* src/api/na-data-boxed.h:
	* src/api/na-data-types.h:
	* src/api/na-gconf-monitor.h:
	* src/api/na-gconf-utils.h: Test for NA_DISABLE_DEPRECATED deprecation define.

	* run-distcheck.sh: New file.

	* tools/check-po.sh: Rewrite to have options and messages management.

	* src/utils/na-gconf2key.sh.in: Review comment.

	* src/utils/Makefile.am: Add na-gconf2key.sh.in to the distributed files.

	* docs/reference/Makefile.am: Set the deprecation flags for gtkdoc-scan.

	* tools/check-po.sh: Set the count of errors as exit code.

	* po/POTFILES.in: Updated.

	* src/api/na-gconf-utils.h:
	* src/core/na-gconf-utils.c: Is marked deprecated as of 3.1.0.

	* src/api/na-gconf-monitor.h:
	* src/core/na-gconf-monitor.c: Is marked deprecated as of 3.1.0.

	* src/utils/nautilus-actions-new.c: Output to stdout or as .desktop file.

	* src/utils/na-print-schemas.c: Add a deprecation comment.

	* src/core/na-io-provider.c:
	* src/core/na-io-provider.h (na_io_provider_find_io_provider_by_id):
	New function.

	* src/utils/nautilus-actions-print.c: Move program summary as a global def.

2011-01-15 Pierre Wieser <pwieser@trychlos.org>

	* tools/init-finalize-diff.sh: Fix the interpretation of debug messages.

	* src/test/test-module.c:
	* src/test/test-module-plugin.c: New files.

	* src/test/.gitignore: